--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,38 @@ tests/__pycache__/
 *.bak
 .project
 .pydevproject
+.externalToolBuilders/
+.settings/
+Babel-1.3-py2.7.egg/
+Jinja2-2.7.3-py2.7.egg/
+MarkupSafe-0.23-py2.7.egg/
+Pygments-2.0.2-py2.7.egg/
+Sphinx-1.3b2-py2.7.egg/
+build/
+caldav/__pycache__/__init__.cpython-34.pyc
+caldav/__init__.pyc
+caldav/davclient.pyc
+caldav/elements/__init__.pyc
+caldav/elements/__pycache__/
+caldav/elements/base.pyc
+caldav/elements/cdav.pyc
+caldav/elements/dav.pyc
+caldav/lib/__init__.pyc
+caldav/lib/__pycache__/
+caldav/lib/error.pyc
+caldav/lib/namespace.pyc
+caldav/lib/python_utilities.pyc
+caldav/lib/url.pyc
+caldav/lib/vcal.pyc
+caldav/objects.pyc
+coverage-4.0a4-py2.7.egg/
+dist/
+docutils-0.12-py2.7.egg/
+python_dateutil-2.4.0-py2.7.egg
+pytz-2014.10-py2.7.egg
+snowballstemmer-1.2.0-py2.7.egg
+tests/__init__.pyc
+tests/conf.pyc
+tests/proxy.pyc
+tests/test_caldav.pyc
+vobject-0.8.1c-py2.7.egg
